# hello-juce-libtorch

./: CMakeLists.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h
